[workspace]
members = ["main", "localic-std"]
resolver = "2"

[workspace.dependencies]
reqwest = { version = "0.11.20", features = ["blocking", "json"]}
tokio = { version = "1.43.1", features = ["full"] }
serde_json = {version = "1.0.107"}
cosmwasm-std = "3.0.4"
thiserror = { version = "1.0.31" }

localic-std = { path = "./localic-std"}